--- a/package.json
+++ b/package.json
@@ -35,13 +35,14 @@
     "zod": "3.23.6"
   },
   "devDependencies": {
+    "@tailwindcss/typography": "^0.5.13",
     "@types/node": "20",
     "@types/react": "18",
     "@types/react-dom": "18",
     "eslint": "8",
     "eslint-config-next": "14.2.3",
     "postcss": "8.4.38",
-    "tailwindcss": "3.4.1",
+    "tailwindcss": "3.4.4",
     "typescript": "5"
   }
 }
