--- a/package.json
+++ b/package.json
@@ -16,12 +16,15 @@
     "@radix-ui/react-label": "^2.0.2",
     "@radix-ui/react-slot": "1.0.2",
     "@react-email/components": "0.0.17",
+    "@vercel/postgres": "^0.8.0",
     "class-variance-authority": "0.7.0",
     "clsx": "2.1.1",
     "cmdk": "1.0.0",
+    "date-fns": "^3.6.0",
     "lucide-react": "0.378.0",
     "next": "14.2.3",
     "next-intl": "3.12.2",
+    "next-mdx-remote": "^5.0.0",
     "next-themes": "0.3.0",
     "react": "18",
     "react-dom": "18",
@@ -32,6 +35,7 @@
     "sonner": "1.4.41",
     "tailwind-merge": "2.3.0",
     "tailwindcss-animate": "1.0.7",
+    "vercel": "^34.2.6",
     "zod": "3.23.6"
   },
   "devDependencies": {
