--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,10 +1,4 @@
 {
-  "i18n-ally.localesPaths": [
-    "messages"
-  ],
-  "i18n-ally.extract.ignored": [
-    "*",
-    "(",
-    ")"
-  ]
+	"i18n-ally.localesPaths": ["messages"],
+	"i18n-ally.extract.ignored": ["*", "(", ")"]
 }
