--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
 		"react": "18",
 		"react-dom": "18",
 		"react-hook-form": "7.51.4",
+		"react-markdown": "^9.0.1",
 		"resend": "3.2.0",
 		"server-only": "0.0.1",
 		"sharp": "0.33.3",
